--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,10 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^8.0",
-        "laravel/lumen-framework": "^9.0"
+        "php": "^8.1",
+        "psr/http-client": "^1.0",
+        "laravel/lumen-framework": "^9.0",
+        "guzzlehttp/guzzle": "^7.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
