--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,11 @@
     "type": "project",
     "require": {
         "php": "^8.1",
-        "psr/http-client": "^1.0",
+        "ext-redis": "*",
+        "guzzlehttp/guzzle": "^7.5",
         "laravel/lumen-framework": "^9.0",
-        "guzzlehttp/guzzle": "^7.5"
+        "psr/http-client": "^1.0",
+        "v.chetkov/http-client-mitmproxy": "^0.0.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
